--- a/src/app/componentes/contratista-detalle/contratista-detalle.component.html
+++ b/src/app/componentes/contratista-detalle/contratista-detalle.component.html
@@ -7,25 +7,27 @@
     </button>
 </div>
 <hr>
-<div class="h3">{{contratista.Nombre}} {{contratista.Apellido}}</div>
-<div class="detalle-ficha">
-    <div class="row">
-        <div class="col-sm-4">
-            <div class="detalle-ficha-item">
-                <b>Observaciones</b><br>
-                {{contratista.Observaciones}}
+<div *ngIf="contratista">
+    <div class="h3">{{contratista.Nombre}} {{contratista.Apellido}}</div>
+    <div class="detalle-ficha">
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="detalle-ficha-item">
+                    <b>Observaciones</b><br>
+                    {{contratista.Observaciones}}
+                </div>
             </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="detalle-ficha-item">
-                <b>Teléfono</b><br>
-                {{contratista.Telefono}}
+            <div class="col-sm-4">
+                <div class="detalle-ficha-item">
+                    <b>Teléfono</b><br>
+                    {{contratista.Telefono}}
+                </div>
             </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="detalle-ficha-item">
-                <b>Domicilio</b><br>
-                {{contratista.Domicilio}}
+            <div class="col-sm-4">
+                <div class="detalle-ficha-item">
+                    <b>Domicilio</b><br>
+                    {{contratista.Domicilio}}
+                </div>
             </div>
         </div>
     </div>
@@ -40,22 +42,22 @@
                     Trabajos
                 </mat-panel-title>
                 <mat-panel-description>
-                    Total: {{trabajos.length}}
+                    Total: <span *ngIf="trabajos">{{trabajos.length}}</span>
                 </mat-panel-description>
             </mat-expansion-panel-header>
 
-            <div>
+            <!-- <div>
                 <button mat-raised-button color="warn" (click)="crearTrabajo($event)">
                     Nuevo trabajo
                 </button>
-            </div>
-            <table mat-table [dataSource]="trabajos" class="ancho-completo" *ngIf="trabajos.length>0">
+            </div> -->
+            <table mat-table [dataSource]="trabajos" class="ancho-completo" *ngIf="trabajos && trabajos.length>0">
 
-                <ng-container matColumnDef="editar">
+                <ng-container matColumnDef="detalle">
                     <th mat-header-cell *matHeaderCellDef> </th>
                     <td mat-cell *matCellDef="let trabajo" class="tabla-columna-boton">
-                        <button class="tabla-boton" mat-stroked-button color="primary" (click)="editarTrabajo(trabajo.Id)">
-                            Editar
+                        <button class="tabla-boton" mat-stroked-button color="primary" (click)="verDetalle(trabajo.Id)">
+                            Ver detalle
                         </button>
                     </td>
                 </ng-container>
@@ -67,12 +69,12 @@
 
                 <ng-container matColumnDef="estado">
                     <th mat-header-cell *matHeaderCellDef> Estado </th>
-                    <td mat-cell *matCellDef="let trabajo"> {{obtenerNombreEstado(trabajo.Estado.Id)}} </td>
+                    <td mat-cell *matCellDef="let trabajo"> {{trabajo.Estado.Nombre}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="contrato">
                     <th mat-header-cell *matHeaderCellDef> Contrato </th>
-                    <td mat-cell *matCellDef="let trabajo"> {{obtenerNombreContrato(trabajo.Contrato.Id)}} </td>
+                    <td mat-cell *matCellDef="let trabajo"> {{trabajo.Contrato.Nombre}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="precio">
@@ -81,7 +83,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="pago">
-                    <th mat-header-cell *matHeaderCellDef> Pagado hasta la fecha </th>
+                    <th mat-header-cell *matHeaderCellDef> Pagado </th>
                     <td mat-cell *matCellDef="let trabajo"> {{trabajo.Precio | currency}} </td>
                 </ng-container>
 
@@ -93,10 +95,10 @@
     </mat-accordion>
 
 
-<pre>
+<!-- <pre>
     {{contratista | json}}
 </pre>
 
 <pre>
     {{trabajos | json}}
-</pre>
+</pre> -->
