--- a/src/app/componentes/trabajo-detalle/trabajo-detalle.component.css
+++ b/src/app/componentes/trabajo-detalle/trabajo-detalle.component.css
@@ -1,8 +1,9 @@
 #monto-total {
     margin: 10px;
-    padding: 10px;
-    border: 1px solid black;
-    background-color: rgb(200, 255, 200);
+    padding: 13px;
+    border: 0.5px solid lightgrey;
+    background-color: rgb(245, 255, 245);
+    border-radius: 5px;
     text-align: right;
     font-weight: bold;
     float: right;
