--- a/src/app/componentes/trabajo-editar/trabajo-editar.component.html
+++ b/src/app/componentes/trabajo-editar/trabajo-editar.component.html
@@ -1,4 +1,4 @@
-<h3>Trabajo</h3>
+<h3>{{esCrear ? 'Nuevo' : 'Editar'}} trabajo</h3>
 <div *ngIf="trabajo" class="formulario">
   <div>
     <mat-form-field class="formulario-item">
