contratistas detalle se agregó pagos

--- a/src/app/componentes/trabajo-editar/trabajo-editar.component.html
+++ b/src/app/componentes/trabajo-editar/trabajo-editar.component.html
@@ -40,7 +40,7 @@
 
   <div>
     <mat-form-field class="formulario-item">
-      <input matInput placeholder="Precio" [(ngModel)]="trabajo.Precio">
+      <input matInput placeholder="Precio pactado" [(ngModel)]="trabajo.Precio">
     </mat-form-field>
   </div>
 
