--- a/src/app/componentes/contratista-detalle/contratista-detalle.component.html
+++ b/src/app/componentes/contratista-detalle/contratista-detalle.component.html
@@ -1,4 +1,7 @@
 <div>
+    <button class="tabla-boton" mat-raised-button color="warn" (click)="crearContratista($event)">
+        Nuevo contratista
+    </button>
     <button class="tabla-boton" mat-raised-button color="primary" (click)="editarContratista()">
         Editar contratista
     </button>
@@ -34,65 +37,143 @@
 </div>
 <hr>
 
-    <!-- TRABAJOS -->
-    <mat-accordion>
-        <mat-expansion-panel expanded>
-            <mat-expansion-panel-header>
-                <mat-panel-title>
-                    Trabajos
-                </mat-panel-title>
-                <mat-panel-description>
-                    Total: <span *ngIf="trabajos">{{trabajos.length}}</span>
-                </mat-panel-description>
-            </mat-expansion-panel-header>
+<!-- TRABAJOS -->
+<mat-accordion>
+    <mat-expansion-panel expanded>
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                Trabajos
+            </mat-panel-title>
+            <mat-panel-description>
+                Total: <span *ngIf="trabajos">{{trabajos.length}}</span>
+            </mat-panel-description>
+        </mat-expansion-panel-header>
 
-            <!-- <div>
+        <!-- <div>
                 <button mat-raised-button color="warn" (click)="crearTrabajo($event)">
                     Nuevo trabajo
                 </button>
             </div> -->
-            <table mat-table [dataSource]="trabajos" class="ancho-completo" *ngIf="trabajos && trabajos.length>0">
+        <table mat-table [dataSource]="trabajos" class="ancho-completo" *ngIf="trabajos && trabajos.length>0">
 
-                <ng-container matColumnDef="detalle">
-                    <th mat-header-cell *matHeaderCellDef> </th>
-                    <td mat-cell *matCellDef="let trabajo" class="tabla-columna-boton">
-                        <button class="tabla-boton" mat-stroked-button color="primary" (click)="verDetalle(trabajo.Id)">
-                            Ver detalle
-                        </button>
-                    </td>
-                </ng-container>
+            <ng-container matColumnDef="detalle">
+                <th mat-header-cell *matHeaderCellDef> </th>
+                <td mat-cell *matCellDef="let trabajo" class="tabla-columna-boton">
+                    <button class="tabla-boton" mat-stroked-button color="primary" (click)="verDetalle(trabajo.Id)">
+                        Ver detalle
+                    </button>
+                </td>
+            </ng-container>
 
-                <ng-container matColumnDef="nombre">
-                    <th mat-header-cell *matHeaderCellDef> Nombre </th>
-                    <td mat-cell *matCellDef="let trabajo"> <b>{{trabajo.Nombre}}</b> </td>
-                </ng-container>
+            <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef> Nombre </th>
+                <td mat-cell *matCellDef="let trabajo"> <b>{{trabajo.Nombre}}</b> </td>
+            </ng-container>
 
-                <ng-container matColumnDef="estado">
-                    <th mat-header-cell *matHeaderCellDef> Estado </th>
-                    <td mat-cell *matCellDef="let trabajo"> {{trabajo.Estado.Nombre}} </td>
-                </ng-container>
+            <ng-container matColumnDef="contrato">
+                <th mat-header-cell *matHeaderCellDef> Contrato </th>
+                <td mat-cell *matCellDef="let trabajo"> {{trabajo.Contrato.Nombre}} </td>
+            </ng-container>
 
-                <ng-container matColumnDef="contrato">
-                    <th mat-header-cell *matHeaderCellDef> Contrato </th>
-                    <td mat-cell *matCellDef="let trabajo"> {{trabajo.Contrato.Nombre}} </td>
-                </ng-container>
+            <ng-container matColumnDef="estado">
+                <th mat-header-cell *matHeaderCellDef> Estado </th>
+                <td mat-cell *matCellDef="let trabajo">
+                    <span class="badge" [class.badge-dark]="trabajo.Estado.Id===1" [class.badge-primary]="trabajo.Estado.Id===2"
+                        [class.badge-success]="trabajo.Estado.Id===3" [class.badge-warning]="trabajo.Estado.Id===4"
+                        [class.badge-danger]="trabajo.Estado.Id===5">
+                        {{trabajo.Estado.Nombre}}
+                    </span>
+                </td>
+            </ng-container>
 
-                <ng-container matColumnDef="precio">
-                    <th mat-header-cell *matHeaderCellDef> Precio acordado </th>
-                    <td mat-cell *matCellDef="let trabajo"> {{trabajo.Precio | currency}} </td>
-                </ng-container>
+            <ng-container matColumnDef="precio">
+                <th mat-header-cell *matHeaderCellDef> Precio acordado </th>
+                <td mat-cell *matCellDef="let trabajo"> {{trabajo.Precio | currency}} </td>
+            </ng-container>
 
-                <ng-container matColumnDef="pago">
+            <!-- <ng-container matColumnDef="pagado">
                     <th mat-header-cell *matHeaderCellDef> Pagado </th>
                     <td mat-cell *matCellDef="let trabajo"> {{trabajo.Precio | currency}} </td>
-                </ng-container>
+                </ng-container> -->
 
-                <tr mat-header-row *matHeaderRowDef="columnasDeTablaTrabajos"></tr>
-                <tr mat-row *matRowDef="let row; columns: columnasDeTablaTrabajos;"></tr>
-            </table>
+            <tr mat-header-row *matHeaderRowDef="columnasDeTablaTrabajos"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnasDeTablaTrabajos;"></tr>
+        </table>
 
-        </mat-expansion-panel>
-    </mat-accordion>
+    </mat-expansion-panel>
+</mat-accordion>
+
+<br>
+
+<!-- PAGOS -->
+<mat-accordion>
+    <mat-expansion-panel expanded>
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                Pagos
+            </mat-panel-title>
+            <mat-panel-description>
+                Total: <span *ngIf="pagos">{{pagos.length}}</span>
+            </mat-panel-description>
+        </mat-expansion-panel-header>
+
+        <!-- <div>
+                    <button mat-raised-button color="warn" (click)="crearTrabajo($event)">
+                        Nuevo trabajo
+                    </button>
+                </div> -->
+        <table mat-table [dataSource]="pagos" class="ancho-completo" *ngIf="pagos && pagos.length>0">
+
+            <!-- <ng-container matColumnDef="editar">
+                <th mat-header-cell *matHeaderCellDef> </th>
+                <td mat-cell *matCellDef="let pago" class="tabla-columna-boton">
+                    <button class="tabla-boton" mat-stroked-button color="primary" (click)="editarPago(pago.Id)">
+                        Editar
+                    </button>
+                </td>
+            </ng-container> -->
+
+            <!-- <ng-container matColumnDef="anular">
+                            <th mat-header-cell *matHeaderCellDef> </th>
+                            <td mat-cell *matCellDef="let pago" class="tabla-columna-boton">
+                                <button class="tabla-boton" mat-stroked-button color="warn" (click)="anularPago(pago)">
+                                    {{pago.EstaAnulado ? 'Ratificar': 'Anular'}}
+                                </button>
+                            </td>
+                        </ng-container> -->
+
+            <ng-container matColumnDef="fecha">
+                <th mat-header-cell *matHeaderCellDef> Fecha </th>
+                <td mat-cell *matCellDef="let pago">
+                    {{ pago.Fecha | date:'fullDate' }}
+                    <div class="texto-pequeno">({{ pago.Fecha | date:'shortDate' }})</div>
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="observaciones">
+                <th mat-header-cell *matHeaderCellDef> Observaciones </th>
+                <td mat-cell *matCellDef="let pago"> {{pago.Observaciones}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="estado">
+                <th mat-header-cell *matHeaderCellDef> Estado </th>
+                <td mat-cell *matCellDef="let pago">
+                    <span *ngIf="pago.EstaAnulado" class="badge badge-danger">Anulado</span>
+                    <span *ngIf="!pago.EstaAnulado" class="badge badge-success">Ratificado</span>
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="monto">
+                <th mat-header-cell *matHeaderCellDef class="tabla-columna-precio"> Monto </th>
+                <td mat-cell *matCellDef="let pago" class="tabla-columna-precio"> {{pago.Monto | currency}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="columnasDeTablaPagos"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnasDeTablaPagos;"></tr>
+        </table>
+
+    </mat-expansion-panel>
+</mat-accordion>
 
 
 <!-- <pre>
