--- a/src/app/componentes/materiales/materiales.component.html
+++ b/src/app/componentes/materiales/materiales.component.html
@@ -1,3 +1,9 @@
+<div>
+  <button mat-raised-button color="warn" disabled (click)="crearMaterial($event)">
+    Nuevo material
+  </button>
+</div>
+<hr>
 <div class="h3">Mis materiales</div>
 <table mat-table [dataSource]="materiales" class="mat-elevation-z8 ancho-completo">
 
@@ -44,6 +50,11 @@
       <span *ngIf="!material.EstaComprado" class="badge badge-danger">Faltante</span>
       <span *ngIf="material.EstaComprado" class="badge badge-success">Comprado</span>
     </td>
+  </ng-container>
+
+  <ng-container matColumnDef="precio">
+    <th mat-header-cell *matHeaderCellDef class="tabla-columna-precio"> Precio </th>
+    <td mat-cell *matCellDef="let material" class="tabla-columna-precio"> {{material.Precio | currency}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="columnasDeTablaMateriales"></tr>
