--- a/src/app/componentes/pagos/pagos.component.html
+++ b/src/app/componentes/pagos/pagos.component.html
@@ -1,3 +1,9 @@
+<div>
+  <button mat-raised-button color="warn" disabled (click)="crearPago($event)">
+    Nuevo pago
+  </button>
+</div>
+<hr>
 <div class="h3">Mis pagos</div>
 <table mat-table [dataSource]="pagos" class="mat-elevation-z8 ancho-completo">
 
