--- a/src/app/componentes/trabajo-detalle/trabajo-detalle.component.html
+++ b/src/app/componentes/trabajo-detalle/trabajo-detalle.component.html
@@ -1,6 +1,8 @@
 <div *ngIf="trabajo">
-
     <div>
+        <button class="tabla-boton" mat-raised-button color="warn" (click)="crearTrabajo($event)">
+            Nuevo trabajo
+        </button>
         <button class="tabla-boton" mat-raised-button color="primary" (click)="editarTrabajo()">
             Editar trabajo
         </button>
@@ -48,8 +50,8 @@
                 </div>
                 <div class="detalle-ficha-item">
                     <b>Pagado hasta la fecha</b><br>
-                    {{obtenerMontoDePagosRatificados() | currency}}
-                    <span class="texto-pequeno">(Dif: {{trabajo.Precio - obtenerMontoDePagosRatificados() | currency}})</span>
+                    {{sumarPagosRatificados() | currency}}
+                    <span class="texto-pequeno">(Dif: {{trabajo.Precio - sumarPagosRatificados() | currency}})</span>
                 </div>
             </div>
         </div>
@@ -249,9 +251,26 @@
                     </td>
                 </ng-container>
 
+                <ng-container matColumnDef="precio">
+                    <th mat-header-cell *matHeaderCellDef class="tabla-columna-precio"> Precio </th>
+                    <td mat-cell *matCellDef="let material" class="tabla-columna-precio"> {{material.Precio | currency}} </td>
+                </ng-container>
+
                 <tr mat-header-row *matHeaderRowDef="columnasDeTablaMateriales"></tr>
                 <tr mat-row *matRowDef="let row; columns: columnasDeTablaMateriales;"></tr>
             </table>
+
+            <div class="precios-totales" *ngIf="pagos.length>0">
+                    <div>
+                        <span class="texto-pequeno">Faltante:</span> {{sumarMaterialesFaltantes() | currency}}
+                    </div>
+                    <div>
+                        <span class="texto-pequeno">Comprado:</span> {{sumarMaterialesComprados() | currency}}
+                    </div>
+                    <div>
+                        <span class="texto-pequeno">TOTAL:</span> {{sumarMaterialesTotal() | currency}}
+                    </div>
+                </div>
 
         </mat-expansion-panel>
     </mat-accordion>
@@ -325,15 +344,15 @@
                 <tr mat-row *matRowDef="let row; columns: columnasDeTablaPagos;"></tr>
             </table>
 
-            <div id="monto-total" *ngIf="pagos.length>0">
+            <div class="precios-totales" *ngIf="pagos.length>0">
                 <div>
-                    <span class="texto-pequeno">Ratificado:</span> {{obtenerMontoDePagosRatificados() | currency}}
+                    <span class="texto-pequeno">Ratificado:</span> {{sumarPagosRatificados() | currency}}
                 </div>
                 <div>
-                    <span class="texto-pequeno">Anulado:</span> {{obtenerMontoDePagosAnulados() | currency}}
+                    <span class="texto-pequeno">Anulado:</span> {{sumarPagosAnulados() | currency}}
                 </div>
                 <div>
-                    <span class="texto-pequeno">TOTAL:</span> {{obtenerMontoDePagosTotal() | currency}}
+                    <span class="texto-pequeno">TOTAL:</span> {{sumarPagosTotal() | currency}}
                 </div>
             </div>
 
