Correcciones de bugs

--- a/src/app/componentes/app/app.component.html
+++ b/src/app/componentes/app/app.component.html
@@ -1,6 +1,4 @@
 <app-menu></app-menu>
 <div class="container">
-    <br>
-    <router-outlet></router-outlet>
-    <br>
+    <router-outlet class="margen-general"></router-outlet>
 </div>
