--- a/src/app/componentes/material-editar/material-editar.component.html
+++ b/src/app/componentes/material-editar/material-editar.component.html
@@ -13,7 +13,7 @@
 
   <div>
     <mat-form-field class="formulario-item">
-      <input matInput placeholder="Precio" [(ngModel)]="material.Precio">
+      <input matInput placeholder="Precio" type="number" [(ngModel)]="material.Precio">
     </mat-form-field>
   </div>
 
