--- a/src/app/componentes/pago-editar/pago-editar.component.html
+++ b/src/app/componentes/pago-editar/pago-editar.component.html
@@ -16,7 +16,7 @@
 
   <div>
     <mat-form-field class="formulario-item">
-      <input matInput placeholder="Monto" [(ngModel)]="pago.Monto">
+      <input matInput placeholder="Monto" type="number" [(ngModel)]="pago.Monto">
     </mat-form-field>
   </div>
 
