--- a/src/app/componentes/materiales/materiales.component.html
+++ b/src/app/componentes/materiales/materiales.component.html
@@ -1,13 +1,18 @@
 <div>
-  <button mat-raised-button color="warn" disabled (click)="crearMaterial($event)">
+  <button mat-raised-button color="warn" disabled>
     Nuevo material
   </button>
 </div>
 <hr>
-<div class="h3">Mis materiales</div>
-<table mat-table [dataSource]="materiales" class="mat-elevation-z8 ancho-completo">
+<app-cargando *ngIf="!materiales"></app-cargando>
+<div class="texto-pequeno" *ngIf="materiales&&materiales.length==0">
+  No hay materiales registrados
+</div>
+<div *ngIf="materiales&&materiales.length>0">
+  <div class="h3">Mis materiales</div>
+  <table mat-table [dataSource]="materiales" class="mat-elevation-z8 ancho-completo">
 
-  <!-- <ng-container matColumnDef="editar">
+    <!-- <ng-container matColumnDef="editar">
         <th mat-header-cell *matHeaderCellDef> </th>
         <td mat-cell *matCellDef="let material" class="tabla-columna-boton">
             <button class="tabla-boton" mat-stroked-button color="primary" (click)="editarMaterial(material.Id)">
@@ -25,38 +30,39 @@
         </td>
     </ng-container> -->
 
-  <ng-container matColumnDef="trabajo">
-    <th mat-header-cell *matHeaderCellDef> Trabajo </th>
-    <td mat-cell *matCellDef="let material" class="tabla-columna-boton">
-      <button class="tabla-boton" mat-stroked-button color="primary" (click)="verTrabajo(material.IdTrabajo)">
-        {{material.NombreTrabajo}}
-      </button>
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="trabajo">
+      <th mat-header-cell *matHeaderCellDef> Trabajo </th>
+      <td mat-cell *matCellDef="let material" class="tabla-columna-boton">
+        <button class="tabla-boton" mat-stroked-button color="primary" (click)="verTrabajo(material.IdTrabajo)">
+          {{material.NombreTrabajo}}
+        </button>
+      </td>
+    </ng-container>
 
-  <ng-container matColumnDef="nombre">
-    <th mat-header-cell *matHeaderCellDef> Nombre </th>
-    <td mat-cell *matCellDef="let material"> <b>{{material.Nombre}}</b> </td>
-  </ng-container>
+    <ng-container matColumnDef="nombre">
+      <th mat-header-cell *matHeaderCellDef> Nombre </th>
+      <td mat-cell *matCellDef="let material"> <b>{{material.Nombre}}</b> </td>
+    </ng-container>
 
-  <ng-container matColumnDef="observaciones">
-    <th mat-header-cell *matHeaderCellDef> Observaciones </th>
-    <td mat-cell *matCellDef="let material"> {{material.Observaciones}} </td>
-  </ng-container>
+    <ng-container matColumnDef="observaciones">
+      <th mat-header-cell *matHeaderCellDef> Observaciones </th>
+      <td mat-cell *matCellDef="let material"> {{material.Observaciones}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="estado">
-    <th mat-header-cell *matHeaderCellDef> Estado </th>
-    <td mat-cell *matCellDef="let material">
-      <span *ngIf="!material.EstaComprado" class="badge badge-danger">Faltante</span>
-      <span *ngIf="material.EstaComprado" class="badge badge-success">Comprado</span>
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="estado">
+      <th mat-header-cell *matHeaderCellDef> Estado </th>
+      <td mat-cell *matCellDef="let material">
+        <span *ngIf="!material.EstaComprado" class="badge badge-danger">Faltante</span>
+        <span *ngIf="material.EstaComprado" class="badge badge-success">Comprado</span>
+      </td>
+    </ng-container>
 
-  <ng-container matColumnDef="precio">
-    <th mat-header-cell *matHeaderCellDef class="tabla-columna-precio"> Precio </th>
-    <td mat-cell *matCellDef="let material" class="tabla-columna-precio"> {{material.Precio | currency}} </td>
-  </ng-container>
+    <ng-container matColumnDef="precio">
+      <th mat-header-cell *matHeaderCellDef class="tabla-columna-precio"> Precio </th>
+      <td mat-cell *matCellDef="let material" class="tabla-columna-precio"> {{material.Precio | currency}} </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="columnasDeTablaMateriales"></tr>
-  <tr mat-row *matRowDef="let row; columns: columnasDeTablaMateriales;"></tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="columnasDeTablaMateriales"></tr>
+    <tr mat-row *matRowDef="let row; columns: columnasDeTablaMateriales;"></tr>
+  </table>
+</div>
