--- a/src/app/componentes/trabajo-detalle/trabajo-detalle.component.html
+++ b/src/app/componentes/trabajo-detalle/trabajo-detalle.component.html
@@ -1,16 +1,16 @@
+<div>
+    <button class="tabla-boton" mat-raised-button color="warn" (click)="crearTrabajo($event)">
+        Nuevo trabajo
+    </button>
+    <button class="tabla-boton" mat-raised-button color="primary" (click)="editarTrabajo()">
+        Editar trabajo
+    </button>
+    <button class="tabla-boton" mat-stroked-button color="warn" (click)="eliminarTrabajo()">
+        Eliminar trabajo
+    </button>
+</div>
+<hr>
 <div *ngIf="trabajo">
-    <div>
-        <button class="tabla-boton" mat-raised-button color="warn" (click)="crearTrabajo($event)">
-            Nuevo trabajo
-        </button>
-        <button class="tabla-boton" mat-raised-button color="primary" (click)="editarTrabajo()">
-            Editar trabajo
-        </button>
-        <button class="tabla-boton" mat-stroked-button color="warn" (click)="eliminarTrabajo()">
-            Eliminar trabajo
-        </button>
-    </div>
-    <hr>
     <div class="h3">{{trabajo.Nombre}}</div>
     <div class="detalle-ficha">
         <div class="row">
@@ -58,80 +58,6 @@
     </div>
     <hr>
 
-    <!-- CONTRATISTA -->
-    <!--   <mat-accordion>
-        <mat-expansion-panel>
-            <mat-expansion-panel-header>
-                <mat-panel-title>
-                    Contratista
-                </mat-panel-title>
-                <mat-panel-description>
-                    {{trabajo.Contratista.Nombre}} {{trabajo.Contratista.Apellido}}
-                </mat-panel-description>
-            </mat-expansion-panel-header>
-            <div>
-                <b>Nombre:</b> {{trabajo.Contratista.Nombre}}
-                <br>
-                <b>Apellido:</b> {{trabajo.Contratista.Apellido}}
-                <br>
-                <b>Teléfono:</b> {{trabajo.Contratista.Telefono}}
-                <br>
-                <b>Domicilio:</b> {{trabajo.Contratista.Domicilio}}
-                <br>
-                <b>Observaciones:</b> {{trabajo.Contratista.Observaciones}}
-            </div>
-
-
-
-            <div class="row">
-                <div class="col-md-3">
-                    <mat-list>
-                        <mat-list-item>
-                            <p mat-line>Nombre</p>
-                            <b mat-line mat-subheader>{{trabajo.Contratista.Nombre}}</b>
-                        </mat-list-item>
-                    </mat-list>
-                </div>
-                <div class="col-md-3">
-                    <mat-list>
-                        <mat-list-item>
-                            <p mat-line>Apellido</p>
-                            <b mat-line mat-subheader>{{trabajo.Contratista.Apellido}}</b>
-                        </mat-list-item>
-                    </mat-list>
-                </div>
-                <div class="col-md-3">
-                    <mat-list>
-                        <mat-list-item>
-                            <p mat-line>Teléfono</p>
-                            <b mat-line mat-subheader>{{trabajo.Contratista.Telefono}}</b>
-                        </mat-list-item>
-                    </mat-list>
-                </div>
-                <div class="col-md-3">
-                    <mat-list>
-                        <mat-list-item>
-                            <p mat-line>Domicilio</p>
-                            <b mat-line mat-subheader>{{trabajo.Contratista.Domicilio}}</b>
-                        </mat-list-item>
-                    </mat-list>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <mat-list>
-                        <mat-list-item style="text-align:center">
-                            <p mat-line>Observaciones</p>
-                            <b mat-line mat-subheader>{{trabajo.Contratista.Observaciones}}</b>
-                        </mat-list-item>
-                    </mat-list>
-                </div>
-            </div>
-
-
-        </mat-expansion-panel>
-    </mat-accordion>
-    <br> -->
     <!-- TAREAS -->
     <mat-accordion>
         <mat-expansion-panel expanded>
@@ -148,6 +74,9 @@
                 <button mat-raised-button color="warn" (click)="crearTarea($event)">
                     Nueva tarea
                 </button>
+            </div>
+            <div class="texto-pequeno" *ngIf="trabajo.Tareas.length==0">
+                No hay tareas registradas
             </div>
             <table mat-table [dataSource]="trabajo.Tareas" class="ancho-completo" *ngIf="trabajo.Tareas.length>0">
 
@@ -193,119 +122,129 @@
 
         </mat-expansion-panel>
     </mat-accordion>
+</div>
 
-    <br>
+<br>
 
-    <!-- MATERIALES -->
-    <mat-accordion>
-        <mat-expansion-panel expanded>
-            <mat-expansion-panel-header>
-                <mat-panel-title>
-                    Materiales
-                </mat-panel-title>
-                <mat-panel-description>
-                    Total: {{materiales.length}}
-                </mat-panel-description>
-            </mat-expansion-panel-header>
+<!-- MATERIALES -->
+<app-cargando *ngIf="!materiales"></app-cargando>
+<mat-accordion *ngIf="materiales">
+    <mat-expansion-panel expanded>
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                Materiales
+            </mat-panel-title>
+            <mat-panel-description>
+                Total: {{materiales.length}}
+            </mat-panel-description>
+        </mat-expansion-panel-header>
 
+        <div>
+            <button mat-raised-button color="warn" (click)="crearMaterial($event)">
+                Nuevo material
+            </button>
+        </div>
+        <div class="texto-pequeno" *ngIf="materiales.length==0">
+            No hay materiales registrados
+        </div>
+        <table mat-table [dataSource]="materiales" class="ancho-completo" *ngIf="materiales.length>0">
+
+            <ng-container matColumnDef="editar">
+                <th mat-header-cell *matHeaderCellDef> </th>
+                <td mat-cell *matCellDef="let material" class="tabla-columna-boton">
+                    <button class="tabla-boton" mat-stroked-button color="primary" (click)="editarMaterial(material.Id)">
+                        Editar
+                    </button>
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="eliminar">
+                <th mat-header-cell *matHeaderCellDef> </th>
+                <td mat-cell *matCellDef="let material" class="tabla-columna-boton">
+                    <button class="tabla-boton" mat-stroked-button (click)="eliminarMaterial(material)">
+                        Eliminar
+                    </button>
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef> Nombre </th>
+                <td mat-cell *matCellDef="let material"> <b>{{material.Nombre}}</b> </td>
+            </ng-container>
+
+            <ng-container matColumnDef="observaciones">
+                <th mat-header-cell *matHeaderCellDef> Observaciones </th>
+                <td mat-cell *matCellDef="let material"> {{material.Observaciones}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="estado">
+                <th mat-header-cell *matHeaderCellDef> Estado </th>
+                <td mat-cell *matCellDef="let material">
+                    <span *ngIf="!material.EstaComprado" class="badge badge-danger">Faltante</span>
+                    <span *ngIf="material.EstaComprado" class="badge badge-success">Comprado</span>
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="precio">
+                <th mat-header-cell *matHeaderCellDef class="tabla-columna-precio"> Precio </th>
+                <td mat-cell *matCellDef="let material" class="tabla-columna-precio"> {{material.Precio |
+                    currency}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="columnasDeTablaMateriales"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnasDeTablaMateriales;"></tr>
+        </table>
+
+        <div class="precios-totales" *ngIf="pagos.length>0">
             <div>
-                <button mat-raised-button color="warn" (click)="crearMaterial($event)">
-                    Nuevo material
-                </button>
+                <span class="texto-pequeno">Faltante:</span> {{sumarMaterialesFaltantes() | currency}}
             </div>
-            <table mat-table [dataSource]="materiales" class="ancho-completo" *ngIf="materiales.length>0">
-
-                <ng-container matColumnDef="editar">
-                    <th mat-header-cell *matHeaderCellDef> </th>
-                    <td mat-cell *matCellDef="let material" class="tabla-columna-boton">
-                        <button class="tabla-boton" mat-stroked-button color="primary" (click)="editarMaterial(material.Id)">
-                            Editar
-                        </button>
-                    </td>
-                </ng-container>
-
-                <ng-container matColumnDef="eliminar">
-                    <th mat-header-cell *matHeaderCellDef> </th>
-                    <td mat-cell *matCellDef="let material" class="tabla-columna-boton">
-                        <button class="tabla-boton" mat-stroked-button (click)="eliminarMaterial(material)">
-                            Eliminar
-                        </button>
-                    </td>
-                </ng-container>
-
-                <ng-container matColumnDef="nombre">
-                    <th mat-header-cell *matHeaderCellDef> Nombre </th>
-                    <td mat-cell *matCellDef="let material"> <b>{{material.Nombre}}</b> </td>
-                </ng-container>
-
-                <ng-container matColumnDef="observaciones">
-                    <th mat-header-cell *matHeaderCellDef> Observaciones </th>
-                    <td mat-cell *matCellDef="let material"> {{material.Observaciones}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="estado">
-                    <th mat-header-cell *matHeaderCellDef> Estado </th>
-                    <td mat-cell *matCellDef="let material">
-                        <span *ngIf="!material.EstaComprado" class="badge badge-danger">Faltante</span>
-                        <span *ngIf="material.EstaComprado" class="badge badge-success">Comprado</span>
-                    </td>
-                </ng-container>
-
-                <ng-container matColumnDef="precio">
-                    <th mat-header-cell *matHeaderCellDef class="tabla-columna-precio"> Precio </th>
-                    <td mat-cell *matCellDef="let material" class="tabla-columna-precio"> {{material.Precio | currency}} </td>
-                </ng-container>
-
-                <tr mat-header-row *matHeaderRowDef="columnasDeTablaMateriales"></tr>
-                <tr mat-row *matRowDef="let row; columns: columnasDeTablaMateriales;"></tr>
-            </table>
-
-            <div class="precios-totales" *ngIf="pagos.length>0">
-                    <div>
-                        <span class="texto-pequeno">Faltante:</span> {{sumarMaterialesFaltantes() | currency}}
-                    </div>
-                    <div>
-                        <span class="texto-pequeno">Comprado:</span> {{sumarMaterialesComprados() | currency}}
-                    </div>
-                    <div>
-                        <span class="texto-pequeno">TOTAL:</span> {{sumarMaterialesTotal() | currency}}
-                    </div>
-                </div>
-
-        </mat-expansion-panel>
-    </mat-accordion>
-
-    <br>
-
-    <!-- PAGOS -->
-    <mat-accordion>
-        <mat-expansion-panel expanded>
-            <mat-expansion-panel-header>
-                <mat-panel-title>
-                    Pagos
-                </mat-panel-title>
-                <mat-panel-description>
-                    Total: <span *ngIf="pagos">{{pagos.length}}</span>
-                </mat-panel-description>
-            </mat-expansion-panel-header>
-
             <div>
-                <button mat-raised-button color="warn" (click)="crearPago($event)">
-                    Nuevo pago
-                </button>
+                <span class="texto-pequeno">Comprado:</span> {{sumarMaterialesComprados() | currency}}
             </div>
-            <table mat-table [dataSource]="pagos" class="ancho-completo" *ngIf="pagos.length>0">
+            <div>
+                <span class="texto-pequeno">TOTAL:</span> {{sumarMaterialesTotal() | currency}}
+            </div>
+        </div>
 
-                <ng-container matColumnDef="editar">
-                    <th mat-header-cell *matHeaderCellDef> </th>
-                    <td mat-cell *matCellDef="let pago" class="tabla-columna-boton">
-                        <button class="tabla-boton" mat-stroked-button color="primary" (click)="editarPago(pago.Id)">
-                            Editar
-                        </button>
-                    </td>
-                </ng-container>
+    </mat-expansion-panel>
+</mat-accordion>
 
-                <!-- <ng-container matColumnDef="anular">
+<br>
+
+<!-- PAGOS -->
+<app-cargando *ngIf="!pagos"></app-cargando>
+<mat-accordion *ngIf="pagos">
+    <mat-expansion-panel expanded>
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                Pagos
+            </mat-panel-title>
+            <mat-panel-description>
+                Total: {{pagos.length}}
+            </mat-panel-description>
+        </mat-expansion-panel-header>
+
+        <div>
+            <button mat-raised-button color="warn" (click)="crearPago($event)">
+                Nuevo pago
+            </button>
+        </div>
+        <div class="texto-pequeno" *ngIf="pagos.length==0">
+            No hay pagos registrados
+        </div>
+        <table mat-table [dataSource]="pagos" class="ancho-completo" *ngIf="pagos.length>0">
+
+            <ng-container matColumnDef="editar">
+                <th mat-header-cell *matHeaderCellDef> </th>
+                <td mat-cell *matCellDef="let pago" class="tabla-columna-boton">
+                    <button class="tabla-boton" mat-stroked-button color="primary" (click)="editarPago(pago.Id)">
+                        Editar
+                    </button>
+                </td>
+            </ng-container>
+
+            <!-- <ng-container matColumnDef="anular">
                     <th mat-header-cell *matHeaderCellDef> </th>
                     <td mat-cell *matCellDef="let pago" class="tabla-columna-boton">
                         <button class="tabla-boton" mat-stroked-button color="warn" (click)="anularPago(pago)">
@@ -314,51 +253,50 @@
                     </td>
                 </ng-container> -->
 
-                <ng-container matColumnDef="fecha">
-                    <th mat-header-cell *matHeaderCellDef> Fecha </th>
-                    <td mat-cell *matCellDef="let pago">
-                        {{ pago.Fecha | date:'fullDate' }}
-                        <div class="texto-pequeno">({{ pago.Fecha | date:'shortDate' }})</div>
-                    </td>
-                </ng-container>
+            <ng-container matColumnDef="fecha">
+                <th mat-header-cell *matHeaderCellDef> Fecha </th>
+                <td mat-cell *matCellDef="let pago">
+                    {{ pago.Fecha | date:'fullDate' }}
+                    <div class="texto-pequeno">({{ pago.Fecha | date:'shortDate' }})</div>
+                </td>
+            </ng-container>
 
-                <ng-container matColumnDef="observaciones">
-                    <th mat-header-cell *matHeaderCellDef> Observaciones </th>
-                    <td mat-cell *matCellDef="let pago"> {{pago.Observaciones}} </td>
-                </ng-container>
+            <ng-container matColumnDef="observaciones">
+                <th mat-header-cell *matHeaderCellDef> Observaciones </th>
+                <td mat-cell *matCellDef="let pago"> {{pago.Observaciones}} </td>
+            </ng-container>
 
-                <ng-container matColumnDef="estado">
-                    <th mat-header-cell *matHeaderCellDef> Estado </th>
-                    <td mat-cell *matCellDef="let pago">
-                        <span *ngIf="pago.EstaAnulado" class="badge badge-danger">Anulado</span>
-                        <span *ngIf="!pago.EstaAnulado" class="badge badge-success">Ratificado</span>
-                    </td>
-                </ng-container>
+            <ng-container matColumnDef="estado">
+                <th mat-header-cell *matHeaderCellDef> Estado </th>
+                <td mat-cell *matCellDef="let pago">
+                    <span *ngIf="pago.EstaAnulado" class="badge badge-danger">Anulado</span>
+                    <span *ngIf="!pago.EstaAnulado" class="badge badge-success">Ratificado</span>
+                </td>
+            </ng-container>
 
-                <ng-container matColumnDef="monto">
-                    <th mat-header-cell *matHeaderCellDef class="tabla-columna-precio"> Monto </th>
-                    <td mat-cell *matCellDef="let pago" class="tabla-columna-precio"> {{pago.Monto | currency}} </td>
-                </ng-container>
+            <ng-container matColumnDef="monto">
+                <th mat-header-cell *matHeaderCellDef class="tabla-columna-precio"> Monto </th>
+                <td mat-cell *matCellDef="let pago" class="tabla-columna-precio"> {{pago.Monto | currency}} </td>
+            </ng-container>
 
-                <tr mat-header-row *matHeaderRowDef="columnasDeTablaPagos"></tr>
-                <tr mat-row *matRowDef="let row; columns: columnasDeTablaPagos;"></tr>
-            </table>
+            <tr mat-header-row *matHeaderRowDef="columnasDeTablaPagos"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnasDeTablaPagos;"></tr>
+        </table>
 
-            <div class="precios-totales" *ngIf="pagos.length>0">
-                <div>
-                    <span class="texto-pequeno">Ratificado:</span> {{sumarPagosRatificados() | currency}}
-                </div>
-                <div>
-                    <span class="texto-pequeno">Anulado:</span> {{sumarPagosAnulados() | currency}}
-                </div>
-                <div>
-                    <span class="texto-pequeno">TOTAL:</span> {{sumarPagosTotal() | currency}}
-                </div>
+        <div class="precios-totales" *ngIf="pagos.length>0">
+            <div>
+                <span class="texto-pequeno">Ratificado:</span> {{sumarPagosRatificados() | currency}}
             </div>
+            <div>
+                <span class="texto-pequeno">Anulado:</span> {{sumarPagosAnulados() | currency}}
+            </div>
+            <div>
+                <span class="texto-pequeno">TOTAL:</span> {{sumarPagosTotal() | currency}}
+            </div>
+        </div>
 
-        </mat-expansion-panel>
-    </mat-accordion>
-</div>
+    </mat-expansion-panel>
+</mat-accordion>
 
 <!-- <br>
 <br>
