--- a/src/app/componentes/trabajos/trabajos.component.html
+++ b/src/app/componentes/trabajos/trabajos.component.html
@@ -1,66 +1,72 @@
 <div>
-  <button mat-raised-button color="warn" (click)="crearTrabajo($event)">
+  <button mat-raised-button color="warn" (click)="crearTrabajo()">
     Nuevo trabajo
   </button>
 </div>
 <hr>
-<div class="h3">Mis trabajos</div>
-<table mat-table [dataSource]="trabajos" class="mat-elevation-z8 ancho-completo">
+<app-cargando *ngIf="!trabajos"></app-cargando>
+<div class="texto-pequeno" *ngIf="trabajos&&trabajos.length==0">
+  No hay trabajos registrados
+</div>
+<div *ngIf="trabajos&&trabajos.length>0">
+  <div class="h3">Mis trabajos</div>
+  <table mat-table [dataSource]="trabajos" class="mat-elevation-z8 ancho-completo">
 
-  <ng-container matColumnDef="detalle">
-    <th mat-header-cell *matHeaderCellDef> </th>
-    <td mat-cell *matCellDef="let trabajo" class="tabla-columna-boton">
-      <button class="tabla-boton" mat-stroked-button color="primary" (click)="verDetalle(trabajo.Id)">
-        Ver detalle
-      </button>
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="detalle">
+      <th mat-header-cell *matHeaderCellDef> </th>
+      <td mat-cell *matCellDef="let trabajo" class="tabla-columna-boton">
+        <button class="tabla-boton" mat-stroked-button color="primary" (click)="verDetalle(trabajo.Id)">
+          Ver detalle
+        </button>
+      </td>
+    </ng-container>
 
-  <!-- <ng-container matColumnDef="eliminar">
-    <th mat-header-cell *matHeaderCellDef> </th>
-    <td mat-cell *matCellDef="let trabajo" class="tabla-columna-boton">
-      <button class="tabla-boton" mat-flat-button disabled (click)="eliminarTrabajo(trabajo)">
-        Eliminar
-      </button>
-    </td>
-  </ng-container> -->
+    <!-- <ng-container matColumnDef="eliminar">
+      <th mat-header-cell *matHeaderCellDef> </th>
+      <td mat-cell *matCellDef="let trabajo" class="tabla-columna-boton">
+        <button class="tabla-boton" mat-flat-button disabled (click)="eliminarTrabajo(trabajo)">
+          Eliminar
+        </button>
+      </td>
+    </ng-container> -->
 
-  <ng-container matColumnDef="nombre">
-    <th mat-header-cell *matHeaderCellDef> Nombre </th>
-    <td mat-cell *matCellDef="let trabajo"> <b>{{trabajo.Nombre}}</b> </td>
-  </ng-container>
+    <ng-container matColumnDef="nombre">
+      <th mat-header-cell *matHeaderCellDef> Nombre </th>
+      <td mat-cell *matCellDef="let trabajo"> <b>{{trabajo.Nombre}}</b> </td>
+    </ng-container>
 
-  <!-- <ng-container matColumnDef="tareas">
-    <th mat-header-cell *matHeaderCellDef> Tareas </th>
-    <td mat-cell *matCellDef="let trabajo"> {{trabajo.Tareas.length}} </td>
-  </ng-container> -->
+    <!-- <ng-container matColumnDef="tareas">
+      <th mat-header-cell *matHeaderCellDef> Tareas </th>
+      <td mat-cell *matCellDef="let trabajo"> {{trabajo.Tareas.length}} </td>
+    </ng-container> -->
 
-  <ng-container matColumnDef="contratista">
-    <th mat-header-cell *matHeaderCellDef> Contratista </th>
-    <td mat-cell *matCellDef="let trabajo"> {{trabajo.Contratista.Nombre}} {{trabajo.Contratista.Apellido}} </td>
-  </ng-container>
+    <ng-container matColumnDef="contratista">
+      <th mat-header-cell *matHeaderCellDef> Contratista </th>
+      <td mat-cell *matCellDef="let trabajo"> {{trabajo.Contratista.Nombre}} {{trabajo.Contratista.Apellido}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="contrato">
-    <th mat-header-cell *matHeaderCellDef> Contrato </th>
-    <td mat-cell *matCellDef="let trabajo"> {{trabajo.Contrato.Nombre}} </td>
-  </ng-container>
+    <ng-container matColumnDef="contrato">
+      <th mat-header-cell *matHeaderCellDef> Contrato </th>
+      <td mat-cell *matCellDef="let trabajo"> {{trabajo.Contrato.Nombre}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="estado">
-    <th mat-header-cell *matHeaderCellDef> Estado </th>
-    <td mat-cell *matCellDef="let trabajo">
-      <span class="badge" [class.badge-dark]="trabajo.Estado.Id===1" [class.badge-primary]="trabajo.Estado.Id===2"
-        [class.badge-success]="trabajo.Estado.Id===3" [class.badge-warning]="trabajo.Estado.Id===4"
-        [class.badge-danger]="trabajo.Estado.Id===5">
-        {{trabajo.Estado.Nombre}}
-      </span>
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="estado">
+      <th mat-header-cell *matHeaderCellDef> Estado </th>
+      <td mat-cell *matCellDef="let trabajo">
+        <span class="badge" [class.badge-dark]="trabajo.Estado.Id===1" [class.badge-primary]="trabajo.Estado.Id===2"
+          [class.badge-success]="trabajo.Estado.Id===3" [class.badge-warning]="trabajo.Estado.Id===4"
+          [class.badge-danger]="trabajo.Estado.Id===5">
+          {{trabajo.Estado.Nombre}}
+        </span>
+      </td>
+    </ng-container>
 
-  <ng-container matColumnDef="precio">
-    <th mat-header-cell *matHeaderCellDef class="tabla-columna-precio"> Precio acordado </th>
-    <td mat-cell *matCellDef="let trabajo" class="tabla-columna-precio"> {{trabajo.Precio | currency}} </td>
-  </ng-container>
+    <ng-container matColumnDef="precio">
+      <th mat-header-cell *matHeaderCellDef class="tabla-columna-precio"> Precio acordado </th>
+      <td mat-cell *matCellDef="let trabajo" class="tabla-columna-precio"> {{trabajo.Precio | currency}} </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="columnasDeTabla"></tr>
-  <tr mat-row *matRowDef="let row; columns: columnasDeTabla;"></tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="columnasDeTabla"></tr>
+    <tr mat-row *matRowDef="let row; columns: columnasDeTabla;"></tr>
+  </table>
+</div>
